changing stuff to fit consultation

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: CompSci Blogs
+title: Consultation
 description: "August 2023 to June 2024"
-owner_name: Nighthawk Coders
-github_username: nighthawkcoders
-baseurl: "/rt"
+owner_name: TDWolff
+github_username: TDWolff
+baseurl: "/consultation"
 remote_theme: pages-themes/midnight@v0.2.0
 # remote_theme: pages-themes/dinky@v0.2.0
 # remote_theme: pages-themes/minimal@v0.2.0
